[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/assets/fonts/forgottenplaybill.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/assets/ui/UI/grey_button13.png" type="Texture" id=4]
[ext_resource path="res://output.webm" type="VideoStream" id=5]

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=11]

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -2.0
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1021.0
margin_bottom = 597.0
stream = ExtResource( 5 )
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 599.0
color = Color( 0.0784314, 0.517647, 0, 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 32.0
margin_top = 347.0
margin_right = 448.0
margin_bottom = 578.0

[node name="TopLeftRet" type="Label" parent="Panel"]
margin_left = 15.0
margin_top = 7.0
margin_right = 306.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.996078, 0.94902, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DEFAULT CONTROLS:"

[node name="MoveLabel" type="Label" parent="Panel"]
margin_left = 273.0
margin_top = 108.0
margin_right = 403.0
margin_bottom = 147.0
rect_scale = Vector2( 1, 1.01464 )
custom_colors/font_color = Color( 0.996078, 0.94902, 0.866667, 1 )
custom_fonts/font = SubResource( 6 )
text = "= MOVE"

[node name="InteractLabel" type="Label" parent="Panel"]
margin_left = 267.0
margin_top = 179.0
margin_right = 447.0
margin_bottom = 218.0
rect_scale = Vector2( 1, 1.01464 )
custom_fonts/font = SubResource( 6 )
text = "= INTERACT"

[node name="WSquare" type="Sprite" parent="Panel"]
position = Vector2( 142, 75 )
texture = ExtResource( 4 )

[node name="WLabel" type="Label" parent="Panel/WSquare"]
margin_left = -6.0
margin_top = -16.0
margin_right = 11.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.371094, 0.313465, 0.212614, 1 )
custom_fonts/font = SubResource( 7 )
text = "W"

[node name="ASquare" type="Sprite" parent="Panel"]
position = Vector2( 84, 126 )
texture = ExtResource( 4 )

[node name="ALabel" type="Label" parent="Panel/ASquare"]
margin_left = -5.0
margin_top = -16.0
margin_right = 12.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "A"

[node name="DSquare" type="Sprite" parent="Panel"]
position = Vector2( 142, 127 )
texture = ExtResource( 4 )

[node name="SLabel" type="Label" parent="Panel/DSquare"]
margin_left = -7.0
margin_top = -17.0
margin_right = 10.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "S"

[node name="SSquare" type="Sprite" parent="Panel"]
position = Vector2( 199, 128 )
texture = ExtResource( 4 )

[node name="DLabel2" type="Label" parent="Panel/SSquare"]
margin_left = -8.0
margin_top = -16.0
margin_right = 9.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "D"

[node name="FSquare" type="Sprite" parent="Panel"]
position = Vector2( 142, 194 )
texture = ExtResource( 4 )

[node name="WLabel2" type="Label" parent="Panel/FSquare"]
margin_left = -7.0
margin_top = -15.0
margin_right = 10.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "F"

[node name="Panel2" type="Panel" parent="."]
margin_left = 586.0
margin_top = 350.0
margin_right = 994.0
margin_bottom = 580.0

[node name="TopRightRet" type="Label" parent="Panel2"]
margin_left = 14.0
margin_top = 8.0
margin_right = 140.0
margin_bottom = 44.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 0.996078, 0.94902, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "OPTIONS:"

[node name="StartGameButton" type="Button" parent="Panel2"]
light_mask = 0
margin_left = 17.0
margin_top = 57.0
margin_right = 393.0
margin_bottom = 101.0
theme = SubResource( 11 )
custom_colors/font_color = Color( 0.996078, 0.94902, 0.866667, 1 )
custom_fonts/font = SubResource( 9 )
text = "START GAME!"

[node name="ControlsButton" type="Button" parent="Panel2"]
margin_left = 16.0
margin_top = 113.0
margin_right = 394.0
margin_bottom = 157.0
custom_colors/font_color = Color( 0.996078, 0.94902, 0.866667, 1 )
custom_fonts/font = SubResource( 9 )
text = "MULTIPLAYER CONTROLS"

[node name="QuitGameButton" type="Button" parent="Panel2"]
margin_left = 18.0
margin_top = 169.0
margin_right = 395.0
margin_bottom = 213.0
custom_colors/font_color = Color( 0.996078, 0.94902, 0.866667, 1 )
custom_fonts/font = SubResource( 9 )
text = "QUIT GAME"

[connection signal="pressed" from="Panel2/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Panel2/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Panel2/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
